# sockets_test

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
benchmarks/: bench_client.cpp  bench_e2e_client.cpp  bench_e2e_server.cpp  bench_message.cpp  bench_modbus.cpp  bench_protocol.cpp  bench_registry.cpp
client/: StartupProgress.hpp  main.cpp
client/model/: ClientSession.cpp  ClientSession.hpp
client/transport/: IClientConnector.hpp  TcpClientConnector.cpp  TcpClientConnector.hpp
client/view/: ClientOutputCommands.hpp  ConsoleClientView.cpp  ConsoleClientView.hpp  IClientInputView.hpp  IClientOutputCommand.hpp  IClientOutputView.hpp  IClientView.hpp  QueuedClientOutputView.cpp  QueuedClientOutputView.hpp
client/viewmodel/: ClientViewModel.cpp  ClientViewModel.hpp  IncomingMessagePresenter.cpp  IncomingMessagePresenter.hpp  InputCommandParser.hpp  OutgoingMessageBuilder.cpp  OutgoingMessageBuilder.hpp
common/: Config.cpp  Config.hpp  Message.hpp  ModbusTcp.cpp  ModbusTcp.hpp  Protocol.cpp  Protocol.hpp
common/concurrency/: ICommand.hpp  QueuedCommandExecutor.hpp
common/crypto/: EncryptedKeyStoreFile.cpp  EncryptedKeyStoreFile.hpp  IMessageCipher.hpp  MonocypherMessageCipher.cpp  MonocypherMessageCipher.hpp  PeerKeyStore.cpp  PeerKeyStore.hpp
common/logging/: FileLogger.cpp  FileLogger.hpp
common/transport/: IMessageTransport.hpp  ModbusMessageTransport.cpp  ModbusMessageTransport.hpp
config/: client.conf  client2.conf  server.conf
server/: Server.cpp  Server.hpp  main.cpp
server/model/: ClientRecord.hpp  ClientRegistry.cpp  ClientRegistry.hpp  IClientRegistry.hpp
server/transport/: IListenSocket.hpp  TcpListenSocket.cpp  TcpListenSocket.hpp
server/view/: IServerView.hpp  ServerLogView.cpp  ServerLogView.hpp
server/viewmodel/: AdminCommandParser.cpp  AdminCommandParser.hpp  IMessageHandler.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  MessageDispatcherFactory.cpp  MessageDispatcherFactory.hpp  PresenceBroadcaster.cpp  PresenceBroadcaster.hpp  ServerContext.hpp  ServerViewModel.cpp  ServerViewModel.hpp
server/viewmodel/handlers/: ChatMessageHandler.cpp  ChatMessageHandler.hpp  ListUsersMessageHandler.cpp  ListUsersMessageHandler.hpp  OpaqueUnicastHandler.cpp  OpaqueUnicastHandler.hpp  RegisterMessageHandler.cpp  RegisterMessageHandler.hpp
testing/: MemoryMessageTransport.hpp  NullViews.hpp  fixtures.hpp
tests/: test_admin.cpp  test_client_builder.cpp  test_client_parser.cpp  test_client_presenter.cpp  test_config.cpp  test_crypto.cpp  test_defaults.cpp  test_dispatcher.cpp  test_file_logger.cpp  test_integration.cpp  test_message.cpp  test_modbus.cpp  test_protocol.cpp  test_queued_output.cpp  test_registry.cpp  test_utils.hpp
